--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "dev",
       "type": "shell",
-      "command": "pnpm run dev",
+      "command": "pnpm dev",
       "group": {
         "kind": "build",
         "isDefault": true
